# opengl_learning

./: .gitignore  CMakeLists.txt  InitShader.cpp  compile_commands.json  sierpinski.cpp
perspective_projection/: CMakeLists.txt  perspective_projection.cpp  vshader.glsl
rotating_cube/: CMakeLists.txt  fshader.glsl  rotating_cube.cpp  vshader.glsl
sierpinski/: CMakeLists.txt  sierpinski.cpp  vshader.glsl
sierpinski_recursive/: CMakeLists.txt  fshader.glsl  sierpinski_recursive.cpp
